<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Gank集中营</string>
    <string name="guard_msg">Army`魔君</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="transition_album">AlbumTransition</string>
    <string name="transition_cover">CoverTransition</string>
    <string name="activity_home">首页</string>
    <string name="contacts">通讯录</string>
    <string name="draw_image">相册</string>
    <string name="splash_slogan">Go through the every bit of life</string>
    <string name="about_app_name_with_introduce">干货集中营 - 享受开发的乐趣</string>
    <string name="share" translatable="false">分享</string>
    <string name="open_in_browser" translatable="false">浏览器打开</string>
    <string name="share_page" translatable="false">「%1$s%2$1s (分享自 @Gank) </string>
    <string name="load_fail">Load failed, Please slide up to try again</string>
    <string name="about_introduce">「干货集中营」- 给您最纯粹的开发体验。\n\n开源是必须的，软件采用RxJava + RxAndroid + Retrofit + OkHttp + MVP框架实现，喜欢的朋友请Star，欢迎一起学习讨论。\n\n你的支持将是我最大的动力与褒奖！</string>
    <string name="splash_copyright">Copyright &#169; 2019 iDaily All Rights Reserved\nPowered by Mo Jun</string>
    <string name="about_developers">关于我</string>
    <string name="about_open_source_lis">感谢开源</string>
    <string name="about_open_source_special">特别感谢</string>
    <string name="about_introduce_and_help">介绍与帮助</string>
    <string name="about_open_source_libraries_list">com.squareup.retrofit2:retrofit:2.0.0-beta4\ncom.squareup.okhttp3:okhttp:3.2.0\nio.reactivex:rxandroid:1.1.0\nio.reactivex:rxjava:1.1.0\ncom.facebook.stetho:stetho:1.3.1\ncom.jakewharton:butterknife:7.0.1\ncom.github.bumptech.glide:glide:3.7.0\ncom.yalantis:phoenix:1.2.3\norg.jsoup:jsoup:1.8.3</string>
    <string name="about_function">实现的功能</string>
    <string name="about_function_list">* 干货集中营所有api接口数据\n* 爬虫获取搜狗壁纸\n* 爬虫获取360壁纸\n* 爬虫获取知乎文章\n* 爬虫获取励志网文章\n* 阿里百川用户反馈\n* 强大的图片处理\n* 框架的封装\n* 分享功能\n* RecycleView和ViewPager的结合使用</string>
    <string name="search">搜索</string>
    <string name="set">设置</string>
    <string name="set_about">关于</string>
    <string name="set_feed_back">用户反馈</string>
    <string name="set_clear_cache">清除缓存</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="indicator">%1$s/%2$s</string>
    <string name="about_version">V 2.1.9</string>
    <string name="cd_up_button">Up navigation button</string>
    <string name="cd_clear_button">Clear field</string>
    <string name="hint_prompt">Speak an item name or a number</string>
    <string name="permission_hint">软件必须获取相关权限</string>
    <string name="status_layout_manager_loading">加载中...</string>
    <string name="status_layout_manager_empty">暂无信息</string>
    <string name="status_layout_manager_error">似乎出了点问题</string>
    <string name="status_layout_manager_retry">重新加载</string>
    <string name="equalizer">均衡器</string>
    <string name="artist_tips">歌手 - 专辑</string>
    <string name="song">歌曲</string>
    <string name="error_connection">网络连接异常，请稍后重试！</string>
    <string name="secret_num">~~ 动态 %1$d ~~</string>
    <string name="error_playing_track">播放出错</string>
    <string name="folders">文件夹</string>
    <string name="play_time">--:--</string>
    <string name="play_no_resource">无音乐</string>
    <string name="play_mode">%1$s("%2$d")</string>
    <string name="play_mode_random">随机播放</string>
    <string name="play_mode_repeat">单曲播放</string>
    <string name="play_mode_loop">顺序播放</string>
    <string name="lyric_default_hint">暂无歌词</string>
    <string name="add_to_playlist">增加到歌单</string>
    <string name="share_content">\"我正在使用 MusicLake 听音乐，我觉得很不错哦，推荐给你用一下，下载链接：https://github.com/caiyonglong/MusicLake/releases\"</string>
    <string name="share_song_content">\n\n我分享的歌曲是 %1$s 的 %2$s"</string>
    <string name="share_local_song">我正在听 %1$s的%2$s，喜欢的可以搜索一下哦!</string>
    <string name="feedback_content">==============我正在使用 音乐湖 听音乐==============\n\n Android 版本号: %1$s \n\n 手机型号： %2$s %3$s \n\n反馈问题：\n "</string>
    <string name="retry">重试</string>
    <string name="general_error">网络错误</string>
    <string name="unknown">未知</string>
    <string name="qq_login_tips">QQ登录</string>
    <string name="login_tips">登录后，可以使用在线同步歌单，Android端、PC端都可使用！</string>
    <string name="cancel">取消</string>
    <string name="now_play">正在播放</string>
    <string name="unable_to_play">网络不给力,请检查网络!</string>
    <string name="unable_to_play_exception">播放异常</string>
    <string name="loading">努力加载中&#8230;</string>
    <string name="lyric_loading">加载中&#8230;</string>
    <string name="tip_empty_song">空空如也</string>
    <string name="tip_empty_queue">播放队列为空</string>
    <string name="tip_empty_playlist">暂无歌单，快去新建吧！</string>
    <string name="recent_update">最近更新：%s</string>
    <string name="playlist_name">歌单名</string>
    <string name="playlist_online">我的歌单</string>
    <string name="playlist_creator">创建者</string>
    <string name="playlist_rename">重命名歌单</string>
    <string name="song_num">%1$d 首</string>
    <string name="default_num">0 首</string>
    <string name="random_play">随机播放</string>
    <string name="random_play_num">随机播放(%1$d首)</string>
    <string name="item_local">本地歌曲</string>
    <string name="item_history">播放历史</string>
    <string name="item_favorite">我的收藏</string>
    <string name="item_download">我的下载</string>
    <string name="local_music">本地歌曲</string>
    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>
    <string name="popup_song_detail">歌曲详情</string>
    <string name="popup_play_next">下一首播放</string>
    <string name="popup_add_to_playlist">添加到歌单</string>
    <string name="popup_detail">查看歌曲信息</string>
    <string name="popup_download">下载歌曲</string>
    <string name="popup_delete">删除</string>
    <string name="popup_detail_edit">编辑歌曲信息</string>
    <string name="popup_artist">查看歌手</string>
    <string name="popup_album">查看专辑</string>
    <string name="popup_share">分享</string>
    <string name="warning">警告！</string>
    <string name="prompt">提示</string>
    <string name="download_local_error">不能下载本地音乐!</string>
    <string name="download_ban">因版权问题，暂不支持下载</string>
    <string name="download_ban_some">%1$d首歌曲因版权问题，暂不支持下载，是否继续下载其余%2$s首歌曲？</string>
    <string name="download_empty_error">下载歌曲0首，请选择可下载的歌曲!</string>
    <string name="download_list_tips">已自动过滤掉版权歌曲，可下载歌曲%1$s首，是否继续?</string>
    <string name="download_list_empty_tips">已自动过滤掉版权歌曲，当前无可下载歌曲</string>
    <string name="download_batch">批量下载</string>
    <string name="download_add_success">下载任务添加成功</string>
    <string name="download_network_tips">正在使用数据流量，是否继续？</string>
    <string name="download_content">是否将 %1$s 添加到下载队列</string>
    <string name="download_exits">%1$s已在下载列表中…</string>
    <string name="download_error">下载地址异常</string>
    <string name="delete">删除</string>
    <string name="pause">暂停</string>
    <string name="start">开始</string>
    <string name="tasks_manager_demo_status_loading">加载中&#8230;</string>
    <string name="tasks_manager_demo_status_pending">队列中</string>
    <string name="tasks_manager_demo_status_started">开始下载</string>
    <string name="tasks_manager_demo_status_connected">已连接上</string>
    <string name="tasks_manager_demo_status_progress">下载中&#8230;</string>
    <string name="tasks_manager_demo_status_downloading" formatted="false">已下载%d %%</string>
    <string name="tasks_manager_demo_status_error">出错</string>
    <string name="tasks_manager_demo_status_paused">暂停</string>
    <string name="tasks_manager_demo_status_completed">下载完成</string>
    <string name="tasks_manager_demo_status_not_downloaded">未下载</string>
    <string name="play_next">播放下一首</string>
    <string name="album">专辑</string>
    <string name="setting_lyric">桌面歌词</string>
    <string name="setting_lyric_des">点击请求悬浮窗权限</string>
    <string name="setting_timing">定时关闭</string>
    <string name="setting_timing_summary">定时关闭</string>
    <string name="count_down_time">定时关闭播放</string>
    <string name="search_lyric">在线搜词</string>
    <string name="action_search">在线搜歌</string>
    <string name="song_operate">歌曲操作</string>
    <string name="love">收藏</string>
    <string name="res_baidu">百度</string>
    <string name="res_qq">QQ</string>
    <string name="res_wangyi">网易云</string>
    <string name="res_xiami">虾米</string>
    <string name="res_local">本地</string>
    <string name="lyric_search_result">歌词搜索结果</string>
    <string name="lyric_search_error">没有搜索到 %1$s 相关歌词</string>
    <string name="lyric_search_apply">歌词修改成功</string>
    <string name="lyric_format">字体样式</string>
    <string name="lyric_format_color">歌词颜色</string>
    <string name="lyric_format_size">字体大小</string>
    <string name="lyric_preview">预览：</string>
    <string name="lyric_use">应用</string>
    <string name="login_hint">点我登录</string>
    <string name="un_login_tips">暂未登录</string>
    <string name="logout_hint">退出登录/关闭</string>
    <string name="action_settings">设置</string>
    <string name="header_author_url">个性标签</string>
    <string name="widget_standard">魔音</string>
    <string name="warning_add_playlist">暂不支持添加本地音乐和百度音乐</string>
    <string name="add_un_support_local">暂不支持添加本地歌曲到在线歌单</string>
    <string name="warning_network">暂不支持添加本地音乐和百度音乐</string>
    <string name="resource_error">歌曲资源异常</string>
    <string name="no_song_to_add">请选择需要添加的歌曲!</string>
    <string name="prompt_login">请先登录！</string>
    <string name="title_common">通用</string>
    <string name="title_function">功能</string>
    <string name="playlist_queue">播放队列</string>
    <string name="playlist_manager">歌单管理</string>
    <string name="title_batch_operate">批量操作</string>
    <string name="menu_rename">重命名</string>
    <string name="menu_delete_playlist">删除歌单</string>
    <string name="playlist_queue_clear">清空播放队列?</string>
    <string name="song_resource">音乐来源</string>
    <string name="settings">设置</string>
    <string name="exit">关闭</string>
    <string name="sure">确定</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="lable_cancle">取消</string>
    <string name="item_cached_music">缓存歌曲</string>
    <string name="title_order">排序</string>
    <string name="title_order_title">按歌曲名</string>
    <string name="title_order_artist">按歌手名</string>
    <string name="title_order_album">按专辑名</string>
    <string name="search_history">搜索历史</string>
    <string name="search_hot">热门搜索</string>
    <string name="search_tips">歌手、歌名</string>
    <string name="download_network_error">网络异常，请检查数据是否连接！</string>
    <string name="delete_local_song_empty">请选择需要删除的本地音乐!</string>
    <string name="delete_local_song">是否确定删除当前本地歌曲?</string>
    <string name="delete_local_song_list">是否删除选中的%1$d首歌曲？</string>
    <string name="delete_local_song_error">只能删除本地歌曲</string>
    <string name="delete_song_success">删除成功</string>
    <string name="qq">qq音乐</string>
    <string name="xiami">虾米音乐</string>
    <string name="song_title">歌曲名</string>
    <string name="song_artist">歌手名</string>
    <string name="search_no_results">没有结果</string>
    <string name="all">所有</string>
    <string name="netease">网易云音乐</string>
    <string name="search_filter_xiami">虾米音乐</string>
    <string name="search_filter_netease">网易云</string>
    <string name="search_filter_baidu">百度音乐</string>
    <string name="remove_repeat">去重</string>
    <string name="remove_copyright">包含无版权歌曲</string>
    <string name="setting_key_mobile_wifi">mobile_wifi</string>
    <string name="setting_key_sound_effect">sound_effect</string>
    <string name="charts_netease">网友精选碟</string>
    <string name="cate_huayu">华语</string>
    <string name="cate_gufeng">古风</string>
    <string name="cate_all">全部</string>
    <string name="cate_liuxing">流行</string>
    <string name="hot_artist">热门歌手</string>
    <string name="radio_list">电台</string>
</resources>