<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FitSystemWindows"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_splash_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription=""
        android:scaleType="fitXY"
        tools:ignore="ContentDescription" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ban_shadow" />

    <TextView
        android:id="@+id/tv_splash_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/splash_top_margin"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_splash_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/about_title_padding_top"
        android:text="@string/splash_slogan"
        android:textColor="@color/white"
        android:textSize="@dimen/item_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/about_title_padding_top"
        android:background="@color/alpha_10_white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/developer_item_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_version"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_title_padding_top"
            android:gravity="center"
            android:lineSpacingExtra="2dp"
            android:text="@string/splash_copyright"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>